Resolve PMD errors