@@ -58,7 +58,8 @@ public class TextGeometryFactory extends VPFGeometryFactory implements FileConst
 
         // If the primitive table is there, this coverage is not tiled
         if (!new File(tileDirectory.concat(File.separator).concat(TEXT_PRIMITIVE)).exists()) {
-            Short tileId = new Short(Short.parseShort(values.getAttribute("tile_id").toString()));
+            Short tileId =
+                    Short.valueOf(Short.parseShort(values.getAttribute("tile_id").toString()));
             VPFLibrary vpf = featureClass.getCoverage().getLibrary();
             String tileName = (String) vpf.getTileMap().get(tileId);
 
